--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "soundfile>=0.12.0",
     "openai-whisper>=20231117",
     "qwen-tts>=0.0.5",
+    "moviepy>=2.1.1",
 ]
 
 [project.scripts]
